--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^26.2.1",
+    "ag-grid-react": "^26.2.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
