--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
     "name": "TOIC",
     "description": "3rd order intermodulation products calculator",
     "version": "1.0",
-    "manifest_version": 2,
-    "browser_action": {
+    "manifest_version": 3,
+    "action": {
       "default_popup": "index.html",
       "default_title": "Open the calculator"
     },
