--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-papaparse": "^4.0.2",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
