--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
-    "ag-grid-community": "^31.2.0",
-    "ag-grid-react": "^31.2.0",
+    "@emotion/react": "11.13.3",
+    "@emotion/styled": "11.13.0",
+    "@mui/icons-material": "6.1.1",
+    "ag-grid-community": "32.2.1",
+    "ag-grid-react": "32.2.1",
     "mui": "^0.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-papaparse": "^4.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -39,8 +39,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.2",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "react-scripts": "^5.0.1"
   }
