--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-papaparse": "^4.0.2",
-    "web-vitals": "4.2.3"
+    "web-vitals": "4.2.3",
+    "postcss": ">=8.4.31"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -42,6 +43,7 @@
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "postcss": ">=8.4.31"
   }
 }
