--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@emotion/react": "11.13.3",
     "@emotion/styled": "11.13.0",
     "@mui/icons-material": "6.1.1",
-    "ag-grid-community": "32.2.1",
+    "ag-grid-community": "33.1.1",
     "ag-grid-react": "32.2.1",
     "mui": "^0.0.1",
+    "postcss": ">=8.4.31",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-papaparse": "^4.0.2",
-    "web-vitals": "4.2.3",
-    "postcss": ">=8.4.31"
+    "web-vitals": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -43,7 +43,7 @@
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "react-scripts": "^5.0.1",
-    "postcss": ">=8.4.31"
+    "postcss": ">=8.4.31",
+    "react-scripts": "^5.0.1"
   }
 }
