--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
   "dependencies": {
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
-    "@mui/icons-material": "6.4.7",
+    "@mui/icons-material": "6.4.8",
     "ag-grid-community": "33.1.1",
     "ag-grid-react": "33.1.1",
     "mui": "^0.0.1",
-    "postcss": ">=8.4.31",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-papaparse": "^4.0.2",
-    "web-vitals": "4.2.3"
+    "web-vitals": "4.2.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -43,7 +42,7 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
     "@testing-library/user-event": "14.6.1",
-    "postcss": ">=8.4.31",
+    "postcss": "8.5.3",
     "react-scripts": "^5.0.1"
   }
 }
