--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "ag-grid-community": "33.1.1",
     "ag-grid-react": "33.1.1",
     "mui": "^0.0.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-papaparse": "^4.0.2",
-    "web-vitals": "4.2.4"
+    "web-vitals": "4.2.3",
+    "postcss": ">=8.4.31"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -39,10 +40,10 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.2.0",
-    "@testing-library/user-event": "14.6.1",
-    "postcss": "8.5.3",
-    "react-scripts": "^5.0.1"
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "react-scripts": "^5.0.1",
+    "postcss": ">=8.4.31"
   }
 }
