--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0",
-    "@mui/icons-material": "6.4.8",
-    "ag-grid-community": "33.1.1",
-    "ag-grid-react": "33.1.1",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "7.3.6",
+    "ag-grid-community": "35.0.0",
+    "ag-grid-react": "35.0.0",
     "mui": "^0.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-papaparse": "^4.0.2",
-    "web-vitals": "4.2.3",
-    "postcss": ">=8.4.31"
+    "web-vitals": "4.2.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -40,10 +39,10 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "react-scripts": "^5.0.1",
-    "postcss": ">=8.4.31"
+    "postcss": "8.5.6",
+    "react-scripts": "^5.0.1"
   }
 }
